Putting all together and fix layout bugs.

--- a/css/style.css
+++ b/css/style.css
@@ -204,7 +204,7 @@ a {
     font-size: 1.8rem;
     font-weight: 600;
     text-transform: uppercase;
-    padding: 2rem 3rem;
+    padding: 2rem 4vw;
     margin: 1rem 0;
     border: 0;
     border-radius: 40px;
@@ -261,8 +261,8 @@ a {
 }
 
 .btn--stretched {
-    padding-left: 6rem;
-    padding-right: 6rem;
+    padding-left: 3rem;
+    padding-right: 3rem;
 }
 
 .btn--block {
@@ -300,6 +300,7 @@ a {
     border: 0;
     flex-grow: 1;
     padding: 1.5rem 2rem;
+    width: 0;
 }
 
 .input-group .btn {
@@ -438,7 +439,7 @@ a {
 
 /* Quotes */
 .quote {
-    font-size: 3rem;
+    font-size: 2.5rem;
     font-style: italic;
     color: var(--color-body-darker);
     line-height: 1.3;
@@ -475,6 +476,7 @@ a {
 @media screen and (min-width: 1024px) {
     .quote {
         font-size: 2rem;
+        margin-left: 8rem;
     }
 
     .quote__author {
@@ -493,7 +495,7 @@ a {
 
 @media screen and (min-width: 768px) {
     .grid--1x2 {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
@@ -505,11 +507,12 @@ a {
 
 /* Testimonial */
 .testimonial {
-    padding: 3rem;
+    padding: 2rem;
 }
 
 .testimonial__image {
     position: relative;
+    margin: 0 3rem;
 }
 
 .testimonial__image > img {
@@ -519,19 +522,24 @@ a {
 .testimonial__image > .icon-container {
     position: absolute;
     top: 3rem;
-    width: 60px;
-    height: 60px;
     right: -30px;
 }
 
-@media screen and (min-width: 1024) {
-    .testimonial .quote {
-        font-size: 2.4rem;
-        margin-left: 6rem;
+@media screen and (max-width: 440px) {
+    .testimonial__image > .icon-container {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .testimonial__image {
+        margin: 0;
     }
 
-    .testimonial .quote__author {
-        font-size: 2rem;
+    .testimonial .quote {
+        margin: 5rem 0 0 6rem;
+        font-size: 120%;
+        line-height: 1.5;
     }
 }
 
@@ -540,6 +548,7 @@ a {
     padding: 4rem;
     border-radius: 25px;
 }
+
 .callout--primary {
     background: var(--color-primary);
     color: #fff;
@@ -660,7 +669,7 @@ a {
 }
 
 .logo img {
-    width: 170px;
+    width: 150px;
     height: auto;
 }
 
@@ -743,8 +752,9 @@ a {
 }
 
 .block-domain__prices {
+    color: var(--color-headings);
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 4rem);
     font-size: 2rem;
     font-weight: 600;
@@ -752,7 +762,11 @@ a {
     max-width: 700px;
     margin: 0 auto;
 }
-
+@media screen and (min-width: 400px) {
+    .block-domain__prices {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
 @media screen and (min-width: 768px) {
     .block-domain__prices {
         grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
@@ -771,11 +785,15 @@ a {
 /* Features */
 .feature {
     gap: 4rem 2rem;
-    margin: 12rem 0;
+    margin: 10rem 0;
+}
+
+.feature__content {
+    margin-left: 1rem;
 }
 
 .feature:first-of-type {
-    margin: 6rem 0;
+    margin-top: 6rem;
 }
 
 .feature__heading {
@@ -814,6 +832,7 @@ a {
 
 /* footer */
 .footer {
+    padding-top: 13rem;
     background: #232323;
 }
 
@@ -877,4 +896,9 @@ a {
     .footer__heading {
         font-size: 1.6rem;
     }
+}
+
+/* Sign-up Callout */
+.callout-signup {
+    transform: translateY(5rem);
 }
